--- a/package.json
+++ b/package.json
@@ -12,6 +12,14 @@
         ".": {
             "import": "./dist/index.mjs",
             "require": "./dist/index.cjs"
+        },
+        "./config": {
+            "import": "./dist/config.mjs",
+            "require": "./dist/config.cjs"
+        },
+        "./fixtures": {
+            "import": "./dist/fixtures.mjs",
+            "require": "./dist/fixtures.cjs"
         }
     },
     "main": "./dist/index.cjs",
